# ripYTchat

./: .gitignore  Cargo.toml  LICENSE  README.md  ripytc.py
excalidraw/: ripytc.excalidraw
python/: README.md  ripytc.py
src/: handler.rs  main.rs  service.rs  store.rs  video.rs  youtube.rs
src/store/: models.rs
src/youtube/: api.rs  structs.rs
tests/data/: post_body
